--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,8 @@
 
 name: CI
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
-    branches: [ master ]
-  pull_request:
     branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -21,16 +17,6 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
           
       - name: SSH Remote Commands
         # You may pin to the exact commit or the version.
@@ -38,15 +24,15 @@ jobs:
         uses: appleboy/ssh-action@v0.1.3
         with:
           # ssh host
-          host: # optional
+          host: 47.102.135.172
           # ssh port
-          port: # optional, default is 22
+          port: 22
           # ssh key passphrase
           passphrase: # optional
           # ssh username
-          username: # optional
+          username: root
           # ssh password
-          password: # optional
+          password: 20171128yjyA
           # synchronous execution if multiple hosts
           sync: # optional
           # include more ciphers with use_insecure_cipher
@@ -93,3 +79,5 @@ jobs:
           envs: # optional
           # enable debug mode
           debug: # optional
+          run: 
+            "Hello"
