--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,6 @@ jobs:
           port: 22
           username: root
           password: 20171128yjyA
-          run: 
-            "Hello"
+          run: |
+            echo "success"
+            pwd
