--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,25 +6,27 @@ on:
   push:
     branches: [ master ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Check Out
       - uses: actions/checkout@v2
           
       - name: SSH Remote Commands
-        uses: appleboy/ssh-action@v0.1.3
+        uses: appleboy/ssh-action@master
         with:
-          host: 47.102.135.172
-          port: 22
-          username: root
-          password: 20171128yjyA
-          run: |
-            echo "success"
-            pwd
+          host: ${{ secrets.ALIYUN_HOST }}
+          username: ${{ secrets.ALIYUN_USER }}
+          password: ${{ secrets.ALIYUN_PASSWORD }}
+          script: bash /root/blog_del.sh
+          
+      - name: SCP Files to aliyun
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.ALIYUN_HOST }}
+          username: ${{ secrets.ALIYUN_USER }}
+          password: ${{ secrets.ALIYUN_PASSWORD }}
+          source: "./public"
+          target: "../www/webroot/www.yqqy.top"
