--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           host: ${{ secrets.ALIYUN_HOST }}
           username: ${{ secrets.ALIYUN_USER }}
           password: ${{ secrets.ALIYUN_PASSWORD }}
-          # script: bash /root/blog_del.sh
+          script: bash /root/blog_del.sh
           
       - name: SCP Files to aliyun
         uses: appleboy/scp-action@master
@@ -28,6 +28,5 @@ jobs:
           host: ${{ secrets.ALIYUN_HOST }}
           username: ${{ secrets.ALIYUN_USER }}
           password: ${{ secrets.ALIYUN_PASSWORD }}
-          rm: 1
-          source: "/public/"
-          target: "../www/wwwroot/www.yqqy.top/public/"
+          source: "./public"
+          target: ${{ secrets.ALIYUN_PATH }}
