--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,3 +37,18 @@ jobs:
           algolia_application_id: 'CQ9IB2P7OM'
           algolia_api_key: '0b8ac695d9473a1134af4c32c85d5194'
           file: './public/index.json'
+          
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+
+      - name: Install automic-algolia
+        run: | 
+          npm install atomic-algolia
+          npm run algolia
+        env:
+          ALGOLIA_APP_ID: ${{ secrets.ALGOLIA_APP_ID }}
+          ALGOLIA_ADMIN_KEY: ${{ secrets.ALGOLIA_ADMIN_KEY }}
+          ALGOLIA_INDEX_NAME: ${{ secrets.ALGOLIA_INDEX_NAME }}
+          ALGOLIA_INDEX_FILE: "./public/index.json"
