--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,13 +23,13 @@ jobs:
           script: bash /root/blog_del.sh
           
       - name: SCP Files to aliyun
-        uses: appleboy/scp-action@master
+        uses: garygrossgarten/github-action-scp@release
         with:
           host: ${{ secrets.ALIYUN_HOST }}
           username: ${{ secrets.ALIYUN_USER }}
           password: ${{ secrets.ALIYUN_PASSWORD }}
-          source: "./public"
-          target: ${{ secrets.ALIYUN_PATH }}
+          local: "./public"
+          remote: ${{ secrets.ALIYUN_PATH }}
           
       - name: Use Node.js
         uses: actions/setup-node@v1
