Add Zinx Frame sutdy page.

--- a/config.toml
+++ b/config.toml
@@ -298,7 +298,7 @@ enableEmoji = false
         enable = true
         appId = "kRdzczL0inU57oCl9a4thIUN-gzGzoHsz"
         appKey = "yq4N8FJfqgrqwC4jBw8ifyyK"
-        placeholder = "请您理智发言，共建美好社会！"
+        placeholder = "阅读完全文后请发表100字以上小作文..."
         avatar = "mp"
         meta= ""
         pageSize = 10
