--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,17 +31,17 @@ jobs:
           password: ${{ secrets.ALIYUN_PASSWORD }}
           script: bash /root/blog_develop.sh
           
-      - name: Use Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: '12.x'
+#      - name: Use Node.js
+#        uses: actions/setup-node@v1
+#        with:
+#          node-version: '12.x'
 
-      - name: Install automic-algolia
-        run: | 
-          npm install atomic-algolia
-          npm run algolia
-        env:
-          ALGOLIA_APP_ID: ${{ secrets.ALGOLIA_APP_ID }}
-          ALGOLIA_ADMIN_KEY: ${{ secrets.ALGOLIA_ADMIN_KEY }}
-          ALGOLIA_INDEX_NAME: ${{ secrets.ALGOLIA_INDEX_NAME }}
-          ALGOLIA_INDEX_FILE: "./public/index.json"
+#      - name: Install automic-algolia
+#        run: |
+#          npm install atomic-algolia
+#          npm run algolia
+#        env:
+#          ALGOLIA_APP_ID: ${{ secrets.ALGOLIA_APP_ID }}
+#          ALGOLIA_ADMIN_KEY: ${{ secrets.ALGOLIA_ADMIN_KEY }}
+#          ALGOLIA_INDEX_NAME: ${{ secrets.ALGOLIA_INDEX_NAME }}
+#          ALGOLIA_INDEX_FILE: "./public/index.json"
