--- a/config.toml
+++ b/config.toml
@@ -293,6 +293,17 @@ theme = "DoIt"
     [params.page.table]
       # 是否开启表格排序
       sort = true
+    [params.page.header]
+      # whether to enable auto header numbering
+      # 是否开启标题自动编号
+      [params.page.header.number]
+        enable = false
+        [params.page.header.number.format]
+          h2 = "{h2} {title}"
+          h3 = "{h2}.{h3} {title}"
+          h4 = "{h2}.{h3}.{h4} {title}"
+          h5 = "{h2}.{h3}.{h4}.{h5} {title}"
+          h6 = "{h2}.{h3}.{h4}.{h5}.{h6} {title}"
     #  KaTeX 数学公式
     [params.page.math]
       enable = false
