--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: CI
 
 on:
   push:
-    branches: [ dev ]
+    branches: [ master ]
 
 jobs:
   build:
@@ -29,19 +29,5 @@ jobs:
           host: ${{ secrets.ALIYUN_HOST }}
           username: ${{ secrets.ALIYUN_USER }}
           password: ${{ secrets.ALIYUN_PASSWORD }}
-          script: bash /root/blog_develop.sh
-          
-#      - name: Use Node.js
-#        uses: actions/setup-node@v1
-#        with:
-#          node-version: '12.x'
-
-#      - name: Install automic-algolia
-#        run: |
-#          npm install atomic-algolia
-#          npm run algolia
-#        env:
-#          ALGOLIA_APP_ID: ${{ secrets.ALGOLIA_APP_ID }}
-#          ALGOLIA_ADMIN_KEY: ${{ secrets.ALGOLIA_ADMIN_KEY }}
-#          ALGOLIA_INDEX_NAME: ${{ secrets.ALGOLIA_INDEX_NAME }}
-#          ALGOLIA_INDEX_FILE: "./public/index.json"
+          key: ${{ secrets.ALIYUN_KEY }}
+          script: bash /home/script/blog/deploy.sh
